# MIPVerify.jl

./: .JuliaFormatter.toml  .codecov.yml  .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  PERFORMANCE.md  Project.toml  README.md  REQUIRE  TODO_TASKS.md  appveyor.yml  tracking.csv  versions.js
benchmarks/: BenchmarkHelpers.jl  PGDWarmStart.jl  PGD_WARMSTART_REPORT.md  Project.toml  README.md  REPORT_TEMPLATE.md  append_to_tracking.jl  benchmark_pgd_warmstart.jl  benchmark_wk17a_first100.jl  compare_wk17a_benchmark.jl  generate_pgd_warmstart_candidates.jl  publish_report.sh  run_pair.sh  select_pgd_warmstart_cohort.jl  select_pgd_warmstart_hard_tail.jl  summarize_pgd_warmstart.jl  summarize_wk17a_pair.jl
benchmarks/analysis/: .gitignore  README.md  analyze_pair.py  pyproject.toml  test_analyze_pair.py
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl
examples/: 00_quickstart.ipynb  01_importing_your_own_neural_net.ipynb  02_find_adversarial_example_in_depth.ipynb  02_finding_adversarial_examples_in_depth.ipynb  03_interpreting_the_output_of_find_adversarial_example.ipynb  04_logging_output.ipynb  04_managing_log_output.ipynb  Project.toml
latest/: finding_adversarial_examples.html  index.html  search.html  search_index.js  tutorials.html
release-0.0/: finding_adversarial_examples.html  search_index.js
release-0.1/: tutorials.html
research/: LOG.md  ROADMAP.md
scripts/: format.sh
src/: MIPVerify.jl  batch_processing_helpers.jl  import.jl  instrumentation.jl  (+5 more)
(+831 files in other folders)
