[project]
name = "mipverify-benchmark-analysis"
version = "0.1.0"
description = "Paired before/after benchmark analysis: distribution of per-sample improvements"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
